<resources>
    <string name="app_name">Simple RSS</string>
    <string name="title_activity_sources_list">Sources</string>
    <string name="title_activity_add_source">Add source</string>
    <string name="sources">Sources</string>
    <string name="SAVE">SAVE</string>
    <string name="hint_source_name">Source name</string>
    <string name="hint_source_url">Source url</string>
    <string name="test_source">Test source</string>
    <string name="error_add_source_name">Insert a valid name</string>
    <string name="error_add_source_url">Insert a valid url</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="enable_sources">Enable sources</string>
    <string name="add_source">Add source</string>
    <string name="empty_articles_no_source">"You haven't added any source"</string>
    <string name="empty_articles_sources_disabled">All the sources are disabled</string>
    <string name="empty_articles_must_refresh">No article available at the moment</string>

    <string name="test_feed_http_error">A network error occurred</string>
    <string name="test_feed_xml_error">"Source doesn't return a valid rss xml"</string>
    <string name="test_feed_empty_error">"Source returned an empty feed"</string>

    <string name="refresh">Refresh</string>
    <string name="source_deleted">%1$s deleted</string>
    <string name="undo">UNDO</string>
    <string name="settings">Settings</string>

    <string name="settings_refresh_interval_title">Source refresh interval</string>
    <string name="settings_refresh_interval_descr">"Time interval after which a feed source will be considered out-dated."</string>
    <string name="settings_articles_images_title">Articles images</string>
    <string name="settings_articles_images_descr">Show images in article list screen, disable this option if you want to save network traffic.</string>
    <string name="settings_use_metered_networks_title">Use metered networks</string>
    <string name="settings_use_metered_networks_descr">If enabled, metered network can be used to download feeds and images. This option does not apply when opening an article, only for refreshing feed sources.</string>
    <string name="settings_opens_articles_in_app_title">Open articles in-app</string>
    <string name="settings_opens_articles_in_app_descr">If selected, articles will be opened within the app in a WebView.</string>
    <string name="settings_clear_data_title">Clear data</string>
    <string name="settings_clear_data_descr">Click here to delete everything from local storage, including all sources and downloaded articles.</string>
    <string name="type_in_url">Type in the URL</string>
    <string name="discover">Discover</string>
    <string name="found_feed_n_articles">Found %d articles</string>
    <string name="ADD_ALL">ADD ALL</string>
    <string name="add_sources">Add sources</string>
    <string name="add_all_sources_empty_list">There is no source to add.</string>
    <string name="add_all_sources_message">Add %1$s sources:\n%2$s</string>
    <string name="discover_sources">Discover source</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="walkthrough_metered_network_question">Do you want the app to use metered networks (mobile) to download feeds and images?</string>
    <string name="walkthrough_first_page"><![CDATA[Thanks for downloading %1$s!<br><br>This app doesn\'t track any personal data and the source is freely available on <a href="https://www.github.com/lelloman/android-simple-rss">github</a>.]]></string>
    <string name="walkthrough_second_page">The app is compatible with RSS and Atom feeds, you can manually add a source or discover sources from a website.\n\nIn the next step you can try to discover feed sources, you will need to type in a website (e.g. newyorktimes.com).</string>
    <string name="OK">OK</string>
    <string name="settings_theme_descr">Theme</string>
    <string name="settings_theme_title">Change the colors of the app.</string>

    <string name="last_refresh">last refresh: %1$s</string>
    <string name="never">never</string>
    <string name="close">Close</string>
    <string name="no_feed_found">"Didn't find any feed…"</string>

    <string name="sources_list_empty_list_message">@string/empty_articles_no_source</string>
    <string name="next">Next</string>
    <string name="pick_a_theme">Pick a theme</string>
    <string name="clear_data_confirmation_title">Clear data</string>
    <string name="clear_data_confirmation_message">Do you want to delete everything from storage? All sources, articles, images and settings will be lost.</string>
    <string name="reset_shared_prefs">Reset shared prefs</string>
    <string name="reset_db">Reset db</string>
    <string name="reset_db_confirmation_title">Reset db</string>
    <string name="reset_db_confirmation_message">Do you really want to reset the db?</string>
    <string name="reset_shared_prefs_confirmation_title">Reset shared prefs</string>
    <string name="reset_shared_prefs_confirmation_message">Do you really want to reset the shared preferences?</string>

</resources>
