<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.lelloman.simplerss.ui.walkthrough.viewmodel.WalkthroughViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view"
            style="@style/WalkthroughInfoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/walkthrough_metered_network_question"
            app:layout_constraintBottom_toTopOf="@+id/button_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Do you want the app to use metered networks (mobile) to download feeds and images?" />

        <Button
            android:id="@+id/button_yes"
            style="@style/WalkthroughButton"
            android:onClick="@{viewModel::onMeteredConnectionYesClicked}"
            android:text="@string/YES"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view"
            tools:text="Ues" />

        <Button
            android:id="@+id/button_no"
            style="@style/WalkthroughButton"
            android:onClick="@{viewModel::onMeteredConnectionNoClicked}"
            android:text="@string/NO"
            app:layout_constraintBottom_toBottomOf="@+id/button_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_yes"
            app:layout_constraintTop_toTopOf="@+id/button_yes"
            tools:text="No" />

    </android.support.constraint.ConstraintLayout>
</layout>